Update autofocus: true to respect user preference

--- a/src/templates/settings/assets/transforms/_settings.twig
+++ b/src/templates/settings/assets/transforms/_settings.twig
@@ -33,7 +33,7 @@
             name: 'name',
             value: transform.name,
             errors: transform.getErrors('name'),
-            autofocus: true,
+            autofocus: currentUser.getAutofocusPreferred(),
             required: true,
         }) }}
 
