--- a/src/templates/settings/categories/_edit.twig
+++ b/src/templates/settings/categories/_edit.twig
@@ -30,7 +30,7 @@
         name: 'name',
         value: categoryGroup.name,
         errors: categoryGroup.getErrors('name'),
-        autofocus: true,
+        autofocus: currentUser.getAutofocusPreferred(),
         required: true,
     }) }}
 
