--- a/src/templates/settings/fields/_edit.twig
+++ b/src/templates/settings/fields/_edit.twig
@@ -42,7 +42,7 @@
         value: field.name,
         errors: field.getErrors('name'),
         required: true,
-        autofocus: true
+        autofocus: currentUser.getAutofocusPreferred()
     }) }}
 
     {{ forms.textField({
