--- a/src/templates/settings/filesystems/_edit.twig
+++ b/src/templates/settings/filesystems/_edit.twig
@@ -9,7 +9,7 @@
     name: 'name',
     value: (filesystem is defined ? filesystem.name : null),
     errors: (filesystem is defined ? filesystem.getErrors('name') : null),
-    autofocus: true,
+    autofocus: currentUser.getAutofocusPreferred(),
     required: true,
 }) }}
 
