--- a/src/templates/settings/sites/_edit.twig
+++ b/src/templates/settings/sites/_edit.twig
@@ -40,7 +40,7 @@
             value: site.getName(false),
             suggestEnvVars: true,
             errors: site.getErrors('name'),
-            autofocus: true,
+            autofocus: currentUser.getAutofocusPreferred(),
             required: true,
         }) }}
 
