Namespace from tabs.twig instead

--- a/src/templates/_includes/tabs.twig
+++ b/src/templates/_includes/tabs.twig
@@ -19,6 +19,7 @@
         },
     } %}
         {% for containerId, tab in tabs %}
+            {% set containerId = containerId|namespaceInputId %}
             {% tag 'a' with {
                 id: tab.tabId ?? "tab-#{containerId}",
                 class: (tab.selected ? ['sel'] : [])|merge(tab.class),
@@ -77,6 +78,7 @@
     <div id="tab-menu" class="menu menu--disclosure">
         <ul class="padded">
             {% for containerId, tab in tabs %}
+                {% set containerId = containerId|namespaceInputId %}
                 <li>
                     {% tag 'a' with {
                         class: (tab.selected ? 'sel' : null) ~ ('error' in tab.class ? ' error' : null),
