Enforce getAutofocusPreferred() from the form input templates

--- a/src/templates/settings/assets/transforms/_settings.twig
+++ b/src/templates/settings/assets/transforms/_settings.twig
@@ -33,7 +33,7 @@
             name: 'name',
             value: transform.name,
             errors: transform.getErrors('name'),
-            autofocus: currentUser.getAutofocusPreferred(),
+            autofocus: true,
             required: true,
         }) }}
 
