--- a/src/templates/settings/assets/volumes/_edit.twig
+++ b/src/templates/settings/assets/volumes/_edit.twig
@@ -10,7 +10,7 @@
     name: 'name',
     value: volume.name,
     errors: volume.getErrors('name'),
-    autofocus: currentUser.getAutofocusPreferred(),
+    autofocus: true,
     required: true,
 }) }}
 
