--- a/src/templates/settings/globals/_edit.twig
+++ b/src/templates/settings/globals/_edit.twig
@@ -27,7 +27,7 @@
         name: 'name',
         value: globalSet.name,
         errors: globalSet.getErrors('name'),
-        autofocus: currentUser.getAutofocusPreferred(),
+        autofocus: true,
         required: true,
     }) }}
 
