--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -921,8 +921,8 @@ input.checkbox + label.smalltext {
 .required:after {
   content: 'asterisk';
   @include margin(-2px, 0, 0, 5px);
-  font-size: 7px;
-  color: var(--error-color);
+  font-size: 12px;
+  color: var(--rose-500);
 }
 
 .scrollpane {
