--- a/src/templates/settings/entry-types/index.twig
+++ b/src/templates/settings/entry-types/index.twig
@@ -5,8 +5,8 @@
 
 {% do view.registerTranslations('app', [
     'Are you sure you want to delete “{name}” and all entries of that type?',
+    'Entry Type',
     'Handle',
-    'Name',
     'No entry types exist yet.',
     'No results.',
     'Used by',
@@ -31,7 +31,7 @@
 
 {% js %}
 var columns = [
-    { name: '__slot:title', title: Craft.t('app', 'Name') },
+    { name: '__slot:title', title: Craft.t('app', 'Entry Type') },
     { name: '__slot:handle', title: Craft.t('app', 'Handle') },
     {
         name: 'usages',
