Lots of style adjustments
[ci skip]

--- a/src/web/assets/cp/src/css/_variables.scss
+++ b/src/web/assets/cp/src/css/_variables.scss
@@ -70,6 +70,6 @@
   --large-border-radius: 5px;
 
   --menu-border-radius: var(--medium-border-radius);
-  --checkbox-size: 16px;
-  --radio-size: 16px;
+  --checkbox-size: 1rem;
+  --radio-size: 1rem;
 }
