--- a/packages/craftcms-sass/_mixins.scss
+++ b/packages/craftcms-sass/_mixins.scss
@@ -170,8 +170,6 @@ $mediumBorderRadius: 4px;
 $largeBorderRadius: 5px;
 
 $menuBorderRadius: $mediumBorderRadius;
-$checkboxSize: 16px;
-$radioSize: 16px;
 
 @mixin sans-serif-font {
   font-family:
@@ -263,12 +261,12 @@ $radioSize: 16px;
   user-select: none;
 }
 
-@mixin angle($dir: down, $color: currentColor, $width: 2px) {
+@mixin angle($dir: down, $color: currentColor, $width: calc(2rem / 16)) {
   display: block;
   content: '';
   font-size: 0;
-  width: 7px;
-  height: 7px;
+  width: calc(7rem / 16);
+  height: calc(7rem / 16);
   border: solid $color;
   border-width: 0 $width $width 0;
   opacity: 0.8;
@@ -579,8 +577,8 @@ $radioSize: 16px;
 }
 
 @mixin header-btn {
-  width: 30px;
-  height: 30px;
+  width: calc(30rem / 16);
+  height: calc(30rem / 16);
   padding-left: 0;
   padding-right: 0;
 
