--- a/src/web/assets/cp/src/css/_cp.scss
+++ b/src/web/assets/cp/src/css/_cp.scss
@@ -736,24 +736,24 @@ li.breadcrumb-toggle-wrapper {
 
 #announcements-btn {
   @include header-btn;
-  width: 40px;
+  width: calc(28rem / 16 + 10px);
   position: relative;
 
   &.unread:after {
     content: '';
     display: block;
     position: absolute;
-    top: 3px;
+    top: calc(3rem / 16);
     @include right(5px);
-    width: 7px;
-    height: 7px;
-    border-radius: 4px;
+    width: calc(7rem / 16);
+    height: calc(7rem / 16);
+    border-radius: 50%;
     background-color: var(--blue-600);
   }
 
   svg {
-    width: 18px;
-    height: 18px;
+    width: 1rem;
+    height: 1rem;
     @include svg-mask(var(--ui-control-color));
   }
 
@@ -851,8 +851,8 @@ li.breadcrumb-toggle-wrapper {
   img,
   svg {
     display: block;
-    width: 30px;
-    height: 30px;
+    width: calc(30rem / 16);
+    height: calc(30rem / 16);
     max-width: none;
     border-radius: 50%;
     box-shadow:
@@ -1632,8 +1632,8 @@ li.breadcrumb-toggle-wrapper {
           }
 
           svg {
-            width: 16px;
-            height: 16px;
+            width: 1rem;
+            height: 1rem;
           }
 
           span[data-icon] {
