add data-error-key to settings templates

--- a/src/templates/_components/fs/Local/settings.twig
+++ b/src/templates/_components/fs/Local/settings.twig
@@ -11,5 +11,8 @@
     value: volume.path,
     errors: volume.getErrors('path'),
     required: true,
-    placeholder: "/path/to/folder"|t('app')
+    placeholder: "/path/to/folder"|t('app'),
+    data: {
+        'error-key': 'path',
+    },
 }) }}
