--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -3099,15 +3099,15 @@ table {
   }
 
   &.large {
-    --thumb-size: calc(20rem / 16);
+    --icon-size: calc(20rem / 16);
   }
 
   &.small {
-    --thumb-size: calc(14rem / 16);
+    --icon-size: calc(14rem / 16);
   }
 
   &.puny {
-    --thumb-size: calc(12rem / 16);
+    --icon-size: calc(12rem / 16);
   }
 }
 
