"Show cards in a grid" for relational fields

--- a/src/templates/_includes/forms/elementSelect.twig
+++ b/src/templates/_includes/forms/elementSelect.twig
@@ -46,6 +46,7 @@
         {{ include('_elements/cards.twig', {
             elements,
             viewMode,
+            showInGrid: showCardsInGrid ?? false,
             disabled,
             context: 'field',
             sortable: false,
