--- a/src/web/assets/cp/src/css/craft.scss
+++ b/src/web/assets/cp/src/css/craft.scss
@@ -4,6 +4,7 @@
 @import 'variables';
 @import 'main';
 @import 'cp';
+@import 'global-sidebar';
 @import 'preview';
 @import 'login';
 @import 'fld';
