--- a/src/web/assets/cp/src/css/_cp.scss
+++ b/src/web/assets/cp/src/css/_cp.scss
@@ -1,16 +1,6 @@
 @charset "UTF-8";
 @import '@craftcms/sass/mixins';
 
-:root {
-  --xs: 4px;
-  --s: 8px;
-  --m: 14px;
-  --l: 18px;
-  --xl: 24px;
-  --padding: var(--xl);
-  --neg-padding: calc(var(--padding) * -1);
-}
-
 $sidebarWidth: 226px;
 $sidebarZIndex: 100;
 $detailsWidth: 350px;
@@ -22,6 +12,17 @@ $minHorizontalUiWidth: $minFullUiWidth - $sidebarWidth;
 // Colors
 $badgeBackgroundColor: var(--gray-200);
 $badgeColor: var(--gray-800);
+
+:root {
+  --xs: 4px;
+  --s: 8px;
+  --m: 14px;
+  --l: 18px;
+  --xl: 24px;
+  --padding: var(--xl);
+  --neg-padding: calc(var(--padding) * -1);
+  --sidebar-width: #{$sidebarWidth};
+}
 
 html {
   -webkit-text-size-adjust: 100%;
@@ -81,7 +82,7 @@ body {
 #global-container {
   position: relative;
   display: flex;
-  flex-direction: column;
+  //flex-direction: column;
   min-height: 100vh;
   @include left(0);
 
@@ -99,42 +100,6 @@ body {
 /* global sidebar */
 $sidebarLinkStaticColor: var(--gray-100);
 $sidebarLinkSecondaryColor: var(--gray-200);
-
-#global-sidebar {
-  --is-always-visible: true;
-  position: fixed;
-  z-index: $sidebarZIndex;
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  padding: 0;
-  overflow-y: auto;
-  overflow-x: hidden;
-  -webkit-overflow-scrolling: touch;
-  background-color: transparent;
-  border-right: 1px solid var(--hairline-color);
-  width: $sidebarWidth;
-
-  a {
-    text-decoration: none;
-  }
-
-  & > a,
-  *:not(.has-subnav) > a {
-    &:not([href]) {
-      cursor: default;
-      background-color: transparent;
-    }
-  }
-
-  .light {
-    color: var(--gray-400);
-  }
-
-  @media only screen and (max-width: $minFullUiWidth - 1px) {
-    --is-always-visible: false;
-  }
-}
 
 $systemInfoBgColor: darken($grey800, 5%);
 $systemInfoHoverBgColor: darken($grey800, 10%);
@@ -214,6 +179,30 @@ $systemInfoHoverBgColor: darken($grey800, 10%);
           $systemInfoHoverBgColor
         );
       }
+    }
+  }
+
+  [data-sidebar='collapsed'] #system-info:hover & {
+    opacity: 1;
+    transform: translateY(-50%) translateX(0);
+  }
+
+  [data-sidebar='collapsed'] & {
+    position: absolute;
+    left: calc(100% + (var(--s) * 2));
+    top: 50%;
+    transform: translateY(-50%) translateX(-5px);
+    opacity: 0;
+    @include pane;
+    color: var(--text-color);
+    border-radius: var(--medium-border-radius);
+    padding: var(--xs) var(--s);
+    white-space: nowrap;
+
+    @media screen and (prefers-reduced-motion: no-preference) {
+      transition:
+        opacity 50ms cubic-bezier(0.33, 1, 0.68, 1),
+        transform 150ms cubic-bezier(0.33, 1, 0.68, 1);
     }
   }
 }
@@ -401,6 +390,7 @@ $systemInfoHoverBgColor: darken($grey800, 10%);
 }
 
 #devmode {
+  margin-top: auto;
   flex: 0 0 4px;
   width: 100%;
   min-height: 4px; // fixes Windows scaling bug (https://github.com/craftcms/cms/issues/3259)
@@ -409,7 +399,7 @@ $systemInfoHoverBgColor: darken($grey800, 10%);
 }
 
 #page-container {
-  @include padding-left($sidebarWidth);
+  //@include padding-left($sidebarWidth);
   display: flex;
   flex-direction: column;
   flex-grow: 1;
