Fix nested calc()

--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -2615,8 +2615,8 @@ h2 + .actions {
 /* ----------------------------------------*/
 
 .tablepane {
-  margin: calc(var(--pane-padding, calc(var(--xl) - 2px)) * -1)
-    calc(var(--pane-padding, calc(var(--padding) - 2px)) * -1)
+  margin: calc(var(--pane-padding, var(--xl - 2px)) * -1)
+    calc(var(--pane-padding, var(--padding) - 2px) * -1)
     calc(
       var(--pane-padding, var(--padding)) * -1 + var(--pane-padding, var(--m))
     );
