--- a/src/templates/_components/fieldtypes/PlainText/settings.twig
+++ b/src/templates/_components/fieldtypes/PlainText/settings.twig
@@ -64,13 +64,13 @@
     }) }}
 </fieldset>
 
-<div id="initialRowsContainer" class="nested-fields{% if not field.multiline %} hidden{% endif %}">
+<div id="initialRowsContainer" class="nested-fields{% if not field.multiline %} hidden{% endif %}" data-error-key="initialRows">
     {{ forms.textField({
         label: "Initial Rows"|t('app'),
         id: 'initialRows',
         name: 'initialRows',
         value: field.initialRows,
         size: 3,
-        errors: field.getErrors('initialRows')
+        errors: field.getErrors('initialRows'),
     }) }}
 </div>
