--- a/src/templates/settings/assets/volumes/_edit.twig
+++ b/src/templates/settings/assets/volumes/_edit.twig
@@ -9,9 +9,10 @@
     id: 'name',
     name: 'name',
     value: volume.name,
-    errors: volume.getErrors('name'),
     autofocus: true,
     required: true,
+    errors: volume.getErrors('name'),
+    data: {'error-key': 'name'},
 }) }}
 
 {{ forms.textField({
@@ -22,8 +23,9 @@
     autocorrect: false,
     autocapitalize: false,
     value: volume.handle,
-    errors: volume.getErrors('handle'),
     required: true,
+    errors: volume.getErrors('handle'),
+    data: {'error-key': 'handle'},
 }) }}
 
 <hr>
@@ -37,6 +39,7 @@
     value: volume.getFsHandle(false),
     options: fsOptions,
     errors: volume.getErrors('fsHandle'),
+    data: {'error-key': 'fsHandle'},
 }) }}
 
 {{ forms.textField({
@@ -46,6 +49,7 @@
     name: 'subpath',
     value: volume.getSubpath(false),
     errors: volume.getErrors('subpath'),
+    data: {'error-key': 'subpath'},
 }) }}
 
 {{ forms.fsField({
@@ -57,6 +61,7 @@
     value: volume.transformFsHandle(false),
     options: [{label: 'Same as asset filesystem'|t('app'), value: null}]|merge(craft.cp.getFsOptions()),
     errors: volume.getErrors('transformFsHandle'),
+    data: {'error-key': 'transformFsHandle'},
 }) }}
 
 {{ forms.textField({
@@ -66,6 +71,7 @@
     name: 'transformSubpath',
     value: volume.transformSubpath,
     errors: volume.getErrors('transformSubpath'),
+    data: {'error-key': 'transformSubpath'},
 }) }}
 
 {% if craft.app.getIsMultiSite() %}
@@ -104,6 +110,7 @@
             name: 'titleTranslationKeyFormat',
             value: volume.titleTranslationKeyFormat,
             errors: volume.getErrors('titleTranslationKeyFormat')
+            data: {'error-key': 'titleTranslationKeyFormat'},
         }) }}
     </div>
 
@@ -139,7 +146,8 @@
             id: 'alt-translation-key-format',
             name: 'altTranslationKeyFormat',
             value: volume.altTranslationKeyFormat,
-            errors: volume.getErrors('altTranslationKeyFormat')
+            errors: volume.getErrors('altTranslationKeyFormat'),
+            data: {'error-key': 'altTranslationKeyFormat'},
         }) }}
     </div>
 {% endif %}
